--- a/style.css
+++ b/style.css
@@ -5,17 +5,17 @@
 }
 
 body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     background-color: #0f0e0e;
     color: #e1e1e1;
+    min-height: 100vh;
 }
 
 header{
+    margin: 0 auto;
+    width: 80%;
     display: flex;
-    flex-direction: row;
     justify-content: center;
+    position: relative;
 }
 
 header .logo{
@@ -31,22 +31,71 @@ header .icon{
 
 .logo img{
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .icon img{
     width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+nav{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
 nav ul{
     list-style-type: none;
-    margin-left: 12px;
     display: flex;
     justify-content: space-around;
     gap: 20px;
+    padding: 0;
+    margin: 0;
 }
 
 nav li a{
     text-decoration: none;
     color: #e1e1e1;
-    /*font-weight: 800;*/
+    padding: 0;
+    margin: 0;
+}
+
+main aside{
+    height: 0;
+    width: 100%;
+    position: relative;
+    padding-top: 25%;
+}
+
+main aside video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+
+section p{
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+main section .img-product{
+    display: flex;
+    justify-content: center;
+}
+
+.img-product .width-img{
+    width: 300px;
+}
+
+.width-img img{
+    width: 100%;
 }
