--- a/style.css
+++ b/style.css
@@ -80,22 +80,37 @@ main aside video{
 
 }
 
-
-section p{
-    display: flex;
-    justify-content: center;
-    margin: 20px 0;
-}
-
 main section .img-product{
     display: flex;
     justify-content: center;
+    margin: 40px;
+    gap: 40px;
 }
 
 .img-product .width-img{
-    width: 300px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 20px;
 }
 
 .width-img img{
     width: 100%;
+}
+
+.width-img p{
+    text-transform: uppercase;
+    margin: 10px 0;
+    color: rgb(199, 199, 12);
+    font-weight: 800;
+}
+
+.img-product a{
+    text-decoration: none;
+    color: #e1e1e1;
+}
+
+.img-product a:hover{
+    text-decoration: underline;
 }
