--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ nav li a{
     font-size: 20px;
 }
 
+nav li a:hover{
+    text-decoration: underline;
+}
+
 main aside{
     height: 0;
     width: 100%;
@@ -88,16 +92,25 @@ main section .img-product{
     gap: 40px;
 }
 
-.img-product .width-img a{
+.img-product .width-img {
     width: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     font-size: 20px;
+    transition: all 0.3s ease-out;
+}
+
+.img-product .width-img:hover{
+    transform: translateY(-10px);
+    cursor: pointer;
 }
 
 .width-img img{
     width: 100%;
+    box-shadow: 1px 1px 5px 0px white;
+    
 }
 
 .width-img p{
