--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav li a{
 }
 
 nav li a:hover{
-    text-decoration: underline;
+    background-image: linear-gradient(to bottom, rgba(231, 231, 9, 0.616), #0f0e0e81)
 }
 
 main aside{
